# ouroboros-desktop-windows-port

./: .gitignore  BIBLE.md  Ouroboros.spec  README.md  app.py  build.ps1  build.sh  colab_bootstrap_shim.py  colab_launcher.py  launcher.py  pyproject.toml  server.py
.github/: CODEOWNERS
docs/: ARCHITECTURE.md  index.html  robots.txt  sitemap.xml
notebooks/: quickstart.ipynb
ouroboros/: config.py  consciousness.py  context.py  llm.py  local_model.py  loop.py  memory.py  world_profiler.py
ouroboros/tools/: control.py  evolution_stats.py  git.py  health.py  review.py  search.py  shell.py
prompts/: SAFETY.md  SYSTEM.md
scripts/: download_python_standalone.ps1
supervisor/: events.py  git_ops.py  message_bus.py  queue.py  state.py  telegram.py  workers.py
tests/: test_constitution.py
ui/: first_run.py
web/: app.js  style.css
